--- a/이취코 with 파이썬/pyproject.toml
+++ b/이취코 with 파이썬/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.14.5"
+autopep8 = "^1.7.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
